--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "^9.2.1",
+    "expo-linear-gradient": "^9.2.0",
     "expo-status-bar": "~1.0.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -24,6 +25,7 @@
     "react-navigation-drawer": "^2.7.1",
     "react-navigation-header-buttons": "^7.0.2",
     "react-navigation-stack": "^2.10.4",
+    "react-navigation-switch": "^1.0.1",
     "react-navigation-tabs": "^2.11.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
